Agregue nuevos estilos al admin

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -149,5 +149,64 @@
     "day_title_multiple_sessions": "{{count}} sessions",
     "session_pill_title": "Class: {{ficha}} - {{time}}",
     "months": ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"]
+  },
+  "student_excuses": {
+    "title": "My Excuses",
+    "create_excuse": "Create Excuse",
+    "loading": "Loading my excuses...",
+    "error": "Could not load excuses.",
+    "no_excuses": "You have not submitted any excuses.",
+    "session_date": "Session of",
+    "view_attachment": "View Attachment",
+    "status_approved": "Approved",
+    "status_rejected": "Rejected",
+    "status_pending": "Pending",
+    "sent_date": "Sent",
+    "modal_title": "Create New Excuse",
+    "modal_session_label": "Session with Absence",
+    "modal_select_session": "Select a session",
+    "modal_no_absent_sessions": "No sessions with absences were found to submit excuses.",
+    "modal_reason_label": "Reason for Excuse",
+    "modal_reason_placeholder": "Explain in detail the reason for your absence...",
+    "modal_attachment_label": "Attachment (Optional)",
+    "modal_cancel": "Cancel",
+    "modal_submit": "Submit Excuse",
+    "error_creating": "Error creating excuse: {{error}}"
+  },
+  "student_dashboard": {
+    "title": "My Apprentice Dashboard",
+    "loading": "Loading dashboard...",
+    "summary_title": "My Summary",
+    "attendance_percentage": "Attendance Percentage",
+    "absences": "Absences",
+    "late_arrivals": "Late Arrivals",
+    "attendance_history_title": "My Attendance History",
+    "session_date": "Session Date",
+    "ficha": "Class",
+    "check_in_time": "Time",
+    "status_present": "Present",
+    "status_absent": "Absent",
+    "status_late": "Late",
+    "status_excused": "Excused",
+    "no_records": "No attendance records found.",
+    "error_loading": "Could not load dashboard information."
+  },
+  "student_attendance": {
+    "title": "My Attendance History",
+    "loading": "Loading attendance history...",
+    "error": "Could not load attendance history.",
+    "present": "Present",
+    "absences": "Absences",
+    "late_arrivals": "Late",
+    "excused": "Excused",
+    "status": "Status",
+    "all": "All",
+    "from": "From",
+    "to": "To",
+    "filter": "Filter",
+    "session": "Session",
+    "time": "Time",
+    "no_records": "No attendance records found with the selected filters.",
+    "adjust_filters": "Adjust the filters to see more results."
   }
 }
