--- a/frontend/public/locales/es/translation.json
+++ b/frontend/public/locales/es/translation.json
@@ -149,5 +149,64 @@
     "day_title_multiple_sessions": "{{count}} sesiones",
     "session_pill_title": "Ficha: {{ficha}} - {{time}}",
     "months": ["Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre"]
+  },
+  "student_excuses": {
+    "title": "Mis Excusas",
+    "create_excuse": "Crear Excusa",
+    "loading": "Cargando mis excusas...",
+    "error": "No se pudieron cargar las excusas.",
+    "no_excuses": "No has presentado ninguna excusa.",
+    "session_date": "Sesión del",
+    "view_attachment": "Ver Adjunto",
+    "status_approved": "Aprobada",
+    "status_rejected": "Rechazada",
+    "status_pending": "Pendiente",
+    "sent_date": "Enviada",
+    "modal_title": "Crear Nueva Excusa",
+    "modal_session_label": "Sesión con Inasistencia",
+    "modal_select_session": "Seleccione una sesión",
+    "modal_no_absent_sessions": "No se encontraron sesiones con inasistencias para presentar excusas.",
+    "modal_reason_label": "Motivo de la Excusa",
+    "modal_reason_placeholder": "Explica detalladamente el motivo de tu inasistencia...",
+    "modal_attachment_label": "Adjunto (Opcional)",
+    "modal_cancel": "Cancelar",
+    "modal_submit": "Enviar Excusa",
+    "error_creating": "Error al crear la excusa: {{error}}"
+  },
+  "student_dashboard": {
+    "title": "Mi Dashboard de Aprendiz",
+    "loading": "Cargando dashboard...",
+    "summary_title": "Mi Resumen",
+    "attendance_percentage": "Porcentaje de Asistencia",
+    "absences": "Inasistencias",
+    "late_arrivals": "Llegadas Tarde",
+    "attendance_history_title": "Mi Historial de Asistencia",
+    "session_date": "Fecha de la Sesión",
+    "ficha": "Ficha",
+    "check_in_time": "Hora",
+    "status_present": "Presente",
+    "status_absent": "Ausente",
+    "status_late": "Tarde",
+    "status_excused": "Excusado",
+    "no_records": "No se encontraron registros de asistencia.",
+    "error_loading": "No se pudo cargar la información del dashboard."
+  },
+  "student_attendance": {
+    "title": "Mi Historial de Asistencia",
+    "loading": "Cargando historial de asistencia...",
+    "error": "No se pudo cargar el historial de asistencia.",
+    "present": "Presentes",
+    "absences": "Ausencias",
+    "late_arrivals": "Tardanzas",
+    "excused": "Excusados",
+    "status": "Estado",
+    "all": "Todos",
+    "from": "Desde",
+    "to": "Hasta",
+    "filter": "Filtrar",
+    "session": "Sesión",
+    "time": "Hora",
+    "no_records": "No se encontraron registros de asistencia con los filtros seleccionados.",
+    "adjust_filters": "Ajusta los filtros para ver más resultados."
   }
 }
