Agregue unos esitlos al front end

--- a/frontend/public/locales/es/translation.json
+++ b/frontend/public/locales/es/translation.json
@@ -1,4 +1,16 @@
 {
+  "login_title": "Face Log",
+  "login_subtitle": "Sistema de Asistencia con Reconocimiento Facial",
+  "login_username_label": "Usuario",
+  "login_username_placeholder": "Ingresa tu usuario",
+  "login_password_label": "Contraseña",
+  "login_password_placeholder": "Contraseña",
+  "login_button": "Acceder",
+  "login_loading_button": "Iniciando...",
+  "login_no_account": "¿No tienes una cuenta?",
+  "login_register_link": "Regístrate aquí",
+  "login_forgot_password": "¿Olvidaste tu contraseña?",
+  "login_error_generic": "Error de autenticación. Por favor, verifica tus credenciales.",
   "dashboard_title": "Dashboard del Instructor",
   "loading_summary": "Cargando resumen del dashboard...",
   "assigned_fichas": "Fichas Asignadas",
@@ -208,5 +220,169 @@
     "time": "Hora",
     "no_records": "No se encontraron registros de asistencia con los filtros seleccionados.",
     "adjust_filters": "Ajusta los filtros para ver más resultados."
-  }
+  },
+  "admin_manage_fichas": {
+    "title": "Gestionar Fichas",
+    "loading": "Cargando fichas...",
+    "error": "No se pudieron cargar las fichas.",
+    "create_ficha": "Crear Ficha",
+    "filter_by_number": "Número de Ficha",
+    "filter_by_program": "Programa",
+    "filter_by_instructor": "Instructor",
+    "all_instructors": "Todos",
+    "filter_button": "Filtrar",
+    "table_header_number": "Número",
+    "table_header_program": "Programa",
+    "table_header_journey": "Jornada",
+    "table_header_instructors": "Instructores",
+    "table_header_actions": "Acciones",
+    "edit_button": "Editar",
+    "delete_button": "Eliminar",
+    "report_button": "Reporte",
+    "modal_edit_title": "Editar Ficha",
+    "modal_create_title": "Crear Ficha",
+    "modal_number_label": "Número de Ficha",
+    "modal_program_label": "Programa de Formación",
+    "modal_journey_label": "Jornada",
+    "modal_instructors_label": "Instructores Asignados",
+    "modal_cancel": "Cancelar",
+    "modal_save": "Guardar",
+    "confirm_delete": "¿Estás seguro de que quieres eliminar esta ficha?",
+    "error_deleting": "No se pudo eliminar la ficha.",
+    "error_saving": "Error al guardar la ficha: {{error}}",
+    "required_fields": "Número de ficha y programa son requeridos."
+  },
+  "admin_dashboard": {
+    "title": "Dashboard de Administrador",
+    "loading": "Cargando reporte global...",
+    "error": "No se pudo cargar el reporte global.",
+    "total_fichas": "Total de Fichas",
+    "total_instructors": "Total de Instructores",
+    "total_students": "Total de Aprendices",
+    "total_sessions": "Total de Sesiones",
+    "total_excuses": "Total de Excusas",
+    "pending_excuses": "Excusas Pendientes",
+    "no_data": "No hay datos de reporte global disponibles."
+  },
+  "admin_manage_instructors": {
+    "title": "Gestionar Instructores",
+    "loading": "Cargando instructores...",
+    "error": "No se pudieron cargar los instructores.",
+    "create_instructor": "Crear Instructor",
+    "table_header_username": "Username",
+    "table_header_full_name": "Nombre Completo",
+    "table_header_email": "Email",
+    "table_header_status": "Estado",
+    "table_header_actions": "Acciones",
+    "no_instructors": "No hay instructores para mostrar",
+    "status_active": "Activo",
+    "status_inactive": "Inactivo",
+    "edit_button": "Editar",
+    "delete_button": "Eliminar",
+    "modal_edit_title": "Editar Instructor",
+    "modal_create_title": "Crear Nuevo Instructor",
+    "modal_username_label": "Username",
+    "modal_password_label": "Contraseña",
+    "modal_name_label": "Nombre",
+    "modal_lastname_label": "Apellido",
+    "modal_email_label": "Email",
+    "modal_active_label": "Instructor Activo",
+    "modal_cancel": "Cancelar",
+    "modal_save": "Guardar Instructor",
+    "confirm_delete": "¿Estás seguro de que quieres eliminar este instructor?",
+    "error_deleting": "No se pudo eliminar el instructor.",
+    "error_saving": "Error al guardar el instructor: {{error}}"
+  },
+  "admin_manage_users": {
+    "title": "Gestionar Usuarios",
+    "loading": "Cargando usuarios...",
+    "error": "No se pudieron cargar los usuarios.",
+    "create_user": "Crear Usuario",
+    "filter_by_username": "Username",
+    "filter_by_email": "Email",
+    "filter_by_role": "Rol",
+    "filter_by_status": "Estado",
+    "all_roles": "Todos",
+    "all_statuses": "Todos",
+    "status_active": "Activo",
+    "status_inactive": "Inactivo",
+    "role_student": "Estudiante",
+    "role_instructor": "Instructor",
+    "role_admin": "Administrador",
+    "filter_button": "Filtrar",
+    "table_header_username": "Username",
+    "table_header_full_name": "Nombre Completo",
+    "table_header_email": "Email",
+    "table_header_role": "Rol",
+    "table_header_status": "Estado",
+    "table_header_actions": "Acciones",
+    "no_users": "No hay usuarios para mostrar",
+    "edit_button": "Editar",
+    "delete_button": "Eliminar",
+    "modal_edit_title": "Editar Usuario",
+    "modal_create_title": "Crear Nuevo Usuario",
+    "modal_username_label": "Nombre",
+    "modal_password_label": "Contraseña",
+    "modal_name_label": "Nombre",
+    "modal_lastname_label": "Apellido",
+    "modal_email_label": "Correo",
+    "modal_role_label": "Rol",
+    "modal_student_id_label": "ID de Estudiante",
+    "modal_active_label": "Usuario Activo",
+    "modal_cancel": "Cancelar",
+    "modal_save": "Guardar Usuario",
+    "confirm_delete": "¿Estás seguro de que quieres eliminar este usuario?",
+    "error_deleting": "No se pudo eliminar el usuario.",
+    "error_saving": "Error al guardar el usuario: {{error}}",
+    "unknown_error": "Error desconocido"
+  },
+  "passwords_do_not_match": "Las contraseñas no coinciden.",
+  "face_photos_title": "Fotos de Rostro (Mínimo 1)",
+  "take_photo_button": "Tomar Foto",
+  "photo_preview_alt": "Vista previa {{index}}",
+  "no_photos_captured_yet": "No hay fotos capturadas aún",
+  "registering_button": "Registrando...",
+  "create_account_button": "Crear Cuenta",
+  "already_have_account": "¿Ya tienes una cuenta?",
+  "login_here_link": "Inicia sesión aquí",
+  "register_camera_error_alert": "Error al acceder a la cámara. Por favor, verifica los permisos.",
+  "register_camera_modal_title": "Capturar Foto de Rostro",
+  "register_camera_modal_instructions": "Asegúrate de que tu rostro esté bien iluminado y centrado en el óvalo.",
+  "register_camera_modal_close_button": "Cerrar",
+  "register_camera_modal_capture_button": "Capturar",
+  "register_page_title": "Crear Nueva Cuenta",
+  "register_page_subtitle": "Regístrate para empezar a registrar tu asistencia.",
+  "register_first_name_placeholder": "Nombre(s)",
+  "register_last_name_placeholder": "Apellido(s)",
+  "register_username_placeholder": "Nombre de Usuario",
+  "register_email_placeholder": "Correo Electrónico",
+  "register_password_placeholder": "Contraseña",
+  "register_confirm_password_placeholder": "Confirmar Contraseña",
+  "register_student_id_placeholder": "Número de Documento",
+  "register_ficha_number_placeholder": "Número de Ficha",
+  "forgot_password_success_message": "Solicitud recibida. Redirigiendo para restablecer la contraseña...",
+  "forgot_password_error_message": "No se pudo procesar la solicitud.",
+  "forgot_password_page_title": "Face Log",
+  "forgot_password_page_subtitle": "Restablecer Contraseña",
+  "forgot_password_email_label": "Correo Electrónico",
+  "forgot_password_email_placeholder": "Ingresa tu correo electrónico",
+  "forgot_password_sending_button": "Enviando...",
+  "forgot_password_send_link_button": "Enviar Enlace de Reseteo",
+  "forgot_password_remembered_password": "¿Recordaste tu contraseña?",
+  "forgot_password_back_to_login": "Volver al inicio de sesión",
+  "global_reports_title": "Reportes Globales",
+  "global_reports_ficha_label": "Ficha",
+  "global_reports_all": "Todas",
+  "global_reports_from_label": "Desde",
+  "global_reports_to_label": "Hasta",
+  "global_reports_filter_button": "Filtrar",
+  "global_reports_loading": "Cargando reportes...",
+  "global_reports_error_loading": "No se pudieron cargar los reportes globales.",
+  "global_reports_total_students": "Total de Estudiantes",
+  "global_reports_total_attendances": "Asistencias Totales",
+  "global_reports_total_absences": "Inasistencias Totales",
+  "global_reports_average_attendance": "Promedio de Asistencia",
+  "global_reports_total_sessions": "Sesiones Realizadas",
+  "global_reports_active_fichas": "Fichas Activas",
+  "global_reports_download_pdf": "Descargar PDF del Reporte Actual"
 }
